[FIX][bp/r42600] The 1em minimum height set for admin-modules zones causes unwanted white space in empty module zones on other admin pages also, so this fix limits the scope to div class="ui-droppable"; thanks for clarification, Jonny.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/9.x@42601 b456876b-0849-0410-b77d-98878d47e9d5

--- a/css/admin.css
+++ b/css/admin.css
@@ -359,7 +359,7 @@ a.admbox.off img {
 	display: none;
 }
 
-#page_data .modules {
+.ui-droppable {
 	min-height: 1em;
 }
 
